JAXB. Преобразование XML в POJO. [#436062]