@@ -15,7 +15,8 @@ public class ShellFolder {
         String mask = ".*/..";
         if ("/".equals(path)) {
             while (currentDir.size() > 0) {
-                currentDir.remove(currentDir.size() - 1);
+               // currentDir.remove(currentDir.size() - 1);
+                currentDir.clear();
             }
                 currentDir.add(root);
             pwd();
@@ -52,7 +53,8 @@ public class ShellFolder {
 
     public void  stepBack() {
         if (currentDir.size() > 1) {
-            currentDir.remove(currentDir.size() - 1);
+           // currentDir.remove(currentDir.size() - 1);
+            currentDir.removeLast();
         }
     }
 
